# xbot2_cli

./: .gitignore  README.md  setup.cfg
src/xbot2_cli/: context.py  ecat_cli_main.py  ecat_context.py  main.py  tuning.py  utils.py  xbot2_cli_main.py  xbot2_context.py
src/xbot2_cli/ecat/: api.py  base_cmd.py  base_io.py  zmsg_io.py
src/xbot2_cli/ecat/proto/: cia402.proto  ecat_pdo.proto  ft6_pdo.proto  generic.proto  hyq.proto  imu_pdo.proto  motor_pdo.proto  msg_header.proto  power_pack_pdo.proto  repl_cmd.proto  time.proto
tests/: test_main.py
