[metadata]
name = xbot2_cli
version = 0.1.0
description = A command-line interface for XBot2
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/xbot2_cli
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    click
    requests
    protobuf3_to_dict

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xbot2 = xbot2_cli.xbot2_cli_main:main
    ecat = xbot2_cli.ecat_cli_main:main